$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.632 2010/06/12 15:21:25 jetmore Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.76
-----------------

PP/01 The new ldap_require_cert option would segfault if used.  Fixed.


Exim version 4.75
-----------------

NM/01 Workround for PCRE version dependency in version reporting
      Bugzilla 1073

TF/01 Update valgrind.h and memcheck.h to copies from valgrind-3.6.0.
      This fixes portability to compilers other than gcc, notably
      Solaris CC and HP-UX CC. Fixes Bugzilla 1050.

TF/02 Bugzilla 139: Avoid using the += operator in the modular lookup
      makefiles for portability to HP-UX and POSIX correctness.

PP/01 Permit LOOKUP_foo enabling on the make command-line.
      Also via indented variable definition in the Makefile.
      (Debugging by Oliver Heesakkers).

PP/02 Restore caching of spamd results with expanded spamd_address.
      Patch from author of expandable spamd_address patch, Wolfgang Breyha.

PP/03 Build issue: lookups-Makefile now exports LC_ALL=C
      Improves build reliability.  Fix from: Frank Elsner

NM/02 Fix wide character breakage in the rfc2047 coding
      Fixes bug 1064. Patch from Andrey N. Oktyabrski

NM/03 Allow underscore in dnslist lookups
      Fixes bug 1026. Patch from Graeme Fowler

PP/04 Bugzilla 230: Support TLS-enabled LDAP (in addition to ldaps).
      Code patches from Adam Ciarcinski of NetBSD.

NM/04 Fixed exiqgrep to cope with mailq missing size issue
      Fixes bug 943.

PP/05 Bugzilla 1083: when lookup expansion defers, escape the output which
      is logged, to avoid truncation. Patch from John Horne.

PP/06 Bugzilla 1042: implement freeze_signal on pipe transports.
      Patch from Jakob Hirsch.

PP/07 Bugzilla 1061: restrict error messages sent over SMTP to not reveal
      SQL string expansion failure details.
      Patch from Andrey Oktyabrski.
